# amfs

./: .gitignore  Cargo.toml  README.md  cspell.json
.cspell/: custom-dictionary.txt
.github/: codecov.yml
.github/workflows/: main.yml
amfs/: Cargo.toml
amfs-bin/: Cargo.toml
amfs-macros/: Cargo.toml
amfs-macros/src/: lib.rs
amfs-tests/: Cargo.toml  hashes.txt
amfs-tests/dump_expected/: 0000.dump  0001.dump  0002.dump  0003.dump  0004.dump  0005.dump  0006.dump  0007.dump  0008.dump  0009.dump  0010.dump
amfs-tests/src/: lib.rs  logging.rs
amfs-tests/src/imagegen/: generators.rs  mod.rs  utils.rs
amfs-tests/tests/: test_alloc_unit.rs  test_allocator.rs  test_diskgroup.rs  test_geometry.rs  test_rootgroup.rs  test_superblock.rs
amfs/src/: features.rs  fs.rs  lib.rs  mkfs.rs
amfs/src/disk/: diskgroup.rs  file.rs  mem.rs  mod.rs
amfs/src/doc/: geometry.rs  mod.rs  superblock.rs
amfs/src/ondisk/: allocator.rs  fsgroup.rs  geometry.rs  journal.rs  linkedlist.rs  mod.rs  object.rs  pointer.rs  superblock.rs
amfs/src/operations/: fsck.rs  mkfs.rs  mod.rs
amfs/src/test/: dg.rs  fsinit.rs  logging.rs  mod.rs
