[package]
name = "amfs-bin"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amfs = { path = "../amfs", features = ["log4rs"] }
colored = "2.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
type-layout = "0.2.0"
endian_codec = "0.1.1"
crc32fast = "1.3.2"
