[package]
name = "amfs-macros"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.76", features=["full"] }
quote = "1.0.9"
proc-macro2 = "1.0"