[package]
name = "amfs-tests"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amos-std = { path = "../../amos-std" }
amfs = { path = "../amfs", features = [] }
amfs-macros = { path = "../amfs-macros" }
paste = "1.0.6"
log = "0.4.14"
serde_json = "1.0.78"
data-encoding = "2.3.2"
sha2 = "0.10.1"
