[package]
name = "amfs"
version = "0.1.0"
edition = "2018"
license = "MIT"

[lib]
name = "amfs"
path = "src/lib.rs"

[dependencies]
bitvec = "1.0.0"
crc32fast= "1.3.2"
rand = "0.8.5"
strum = "0.24.0"
strum_macros = "0.24.0"
log = "0.4.14"
log4rs= { version = "1.0.0", optional = true }
derivative = "2.2.0"
more-asserts= "0.2.2"
amfs-macros = { path = "../amfs-macros" }
amos-std = { path = "../../amos-std" }
lazy_static = "1.4.0"
type-layout = "0.2.0"

[dev-dependencies]
itertools = "0.10.3"

[features]
default = ["stable","unstable"]
stable = []
unstable = []
